--- a/Vault-UserCloudUpload/Vault.UserCloudUpload.csproj
+++ b/Vault-UserCloudUpload/Vault.UserCloudUpload.csproj
@@ -165,6 +165,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Autodesk Vault-2-Cloud -- Sample Application Case Study.pdf" />
+    <None Include="Autodesk Vault-2-Cloud -- Sample Application Setup.pdf" />
     <None Include="CodeSnippets\Export BIM-Content-Vault.iLogicVb" />
     <None Include="CodeSnippets\Export RVT-Vault.iLogicVb" />
     <None Include="Key.snk" />
